# GameEngine

./: .gitignore  CMakeLists.txt  README.md  t sfTexture& tex = tileRender.texturePath;;qgit checkq
assets/characters/: characters_metadata.json  characters_metadatav2.json  species_metadata.json  species_metadatav2.json
assets/fonts/: Readme-1.txt
assets/maps/: object_metadata.json  object_metadatav2.json  pallet_town_small.json  route1_small.json  tileset_metadata.json  tileset_metadatav2.json  viridian_forest_small.json
assets/pokemon/: poke_species_gen1.h
assets/sprites/: sprite_metadata.json  sprite_metadata_fox.json  spritesheet .json
include/: Game.h
include/asset/: AssetDatabase.h  AssetError.h  AssetManager.h  AsssetPaths.h  MapObjectRepository.h  SpriteRepository.h  TileRepository.h
include/asset/metadata/: AnimationAssetMetadata.h  ArchetypeDefinition.h  AssetMetadata.h  AssetMetadataName.h  CollisionAssetMetadata.h  CollisionBox.h  CollisionData.h  DirectionNaming.h  InteractionAssetMetadata.h  ItemMetadata.h  MetadataParser.h  PmdAnimationSetMetadata.h  PmdDirectionOrder.h  RenderAssetMetadata.h  RenderBox.h  RenderData.h
include/asset/repositories/: CharacterRepository.h  CollisionAssetRepository.h  ComponentAssetRepository.h  IAssetRepository.h  MapObjectRepository.h  RenderAssetRepository.h  SpriteRepository.h  TileRepository.h
include/asset/source/: IMetadataSource.h  JsonMetadataSource.h
include/component/: AnimationComponent.h  AnimationPlayerComponent.h  CollisionComponent.h  DirectionComponent.h  FloatingTextComponent.h  HealthComponent.h  InteractableComponent.h  InventoryComponent.h  LifetimeComponent.h  MovementStateComponent.h  PlayerControlComponent.h  PositionComponent.h  RenderComponent.h  SpriteAssetComponent.h  SpriteFrameComponent.h  TextRenderComponent.h  WorldItemComponent.h
include/entities/: Component.h  ComponentPool.h  Entity.h  EntityFactory.h  EntityID.h  FreeEntity.h  GridEntity.h  Registry.h  TransformComponent.h
include/entities/animation/: AnimationComponent.h  WalkCycleTimer.h
include/entities/movement/: FreeMovementComponent.h  FreeMovementMechanics.h  GridMovementComponent.h  GridMovementMechanics.h  IFreeMovementMechanics.h  IMovementBehavior.h  IMovementMechanics.h  Position.h  Position2D.h  PositionComponent.h  VelocityComponent.h
include/entities/npc/: CreatureAISystem.h  NpcComponent.h  TileRestrictionComponent.h  WanderAIComponent.h  WildSpawnComponent.h  npc.h
include/entities/player/: Player.h  PlayerControlComponent.h
include/entities/pokemon/: CapturedPokemon.h  ISpeciesRepository.h  Pokemon.h  PokemonFactory.h  PokemonSpecies.h  PokemonSpeciesRepository.h  Stats.h  WildPokemon.h
include/events/: EventDispatcher.h  EventQueue.h  Events.h
include/exceptions/: Assert.h  EngineExceptions.h  Result.h
include/game/: GameServices.h  IGameContext.h
include/input/: ICommand.h  InputManager.h  KeyBindings.h
include/interaction/: InteractionManager.h
include/log/: ConsoleSink.h  FileSink.h  ILogSink.h  LogLevel.h  LogRecord.h  Logger.h
include/render/: AnimationComponent.h  Atlas.h  Camera.h  FreeRenderComponent.h  GridRenderComponent.h  IRenderState.h  IRenderer.h  MapObjectAtlas.h  RenderLayer.h  RenderSystem.h  ResolvedSprite.h  SFMLRenderer.h  SpriteAtlas.h  TileAtlas.h  WalkCycleTimerAdapter.h
include/render/atlases/: Atlas.h  MapObjectAtlas.h  SpriteAtlas.h  TileAtlas.h
include/state/: DialogueState.h  GameplayCommands.h  GameplayState.h  IGameState.h  InventoryState.h  MenuInput.h  PauseState.h  StateFactory.h  StateMachine.h
include/system/: AnimationSystem.h  CameraSystem.h  CollisionSystem.h  DirectionSystem.h  FloatingTextSystem.h  GameConstants.h  GameController.h  InteractionSystem.h  InventorySystem.h  ItemPickupSystem.h  LifetimeSystem.h  MapObjectSystem.h  MovementAnimationSystem.h  MovementSystem.h  RenderStateSystem.h  VelocityIntegrationSystem.h
include/tmp/component/: CollisionComponent.h  InventoryComponent.h  MovementStateComponent.h  PlayerControlComponent.h  WalkCycleTimer.h
include/tmp/movement/: CollisionComponent.h  FreeMovementComponent.h  GridMovementComponent.h  PlayerControlComponent.h  RenderComponent.h  WalkCycleTimer.h
include/ui/: DialogueBox.h  DialogueBoxData.h  MenuContext.h  Panel.h  UIComponent.h  UIFont.h  UIManager.h  UISystem.h  UIType.h
include/utils/: Direction.h  Logger.h  StateMachine.h
include/world/: IInteractable.h  ITeleportable.h  IWalkable.h  Map.h  MapLoader.h  MapObject.h  MapObjectComponent.h  MapObjectRenderComponent.h  MapObjectRepository.h  MapRepository.h  SpriteRepository.h  Terrain.h  Tile.h  TileRepository.h  World.h
pokemon_docs/: 1_Draft.md  2_Epic.md  3_RenderComponent.md  4_AssetManager.md  5_FreeMotion.md  6_EntitiyComponentSystem.md  7_UIDesign.md  98_Resources.md  99_GoodRerences.md
pokemon_docs/.obsidian/: workspace.json
scripts/: import_pmd_animation.py
src/: Game.cpp  main.cpp
src/asset/: AssetDatabase.cpp  AssetManager.cpp  MapObjectRepository.cpp  SpriteRepository.cpp  TileRepository.cpp
src/asset/metadata/: AnimationAssetMetadata.cpp  ArchetypeDefinition.cpp  CollisionAssetMetadata.cpp  InteractionAssetMetadata.cpp  ItemMetadata.cpp  RenderAssetMetadata.cpp
src/asset/repositories/: CharacterRepository.cpp  (+3 more)
src/entities/: Entity.cpp  EntityFactory.cpp  FreeEntity.cpp  GridEntity.cpp
src/events/: EventDispatcher.cpp
src/input/: InputManager.cpp
src/log/: Logger.cpp
src/render/: Atlas.cpp  MapObjectAtlas.cpp  RenderSystem.cpp  SFMLRenderer.cpp  SpriteAtlas.cpp  TileAtlas.cpp
src/state/: DialogueState.cpp  GameplayState.cpp  InventoryState.cpp  PauseState.cpp  StateFactory.cpp
src/system/: CameraSystem.cpp  CollisionSystem.cpp  GameController.cpp  InventorySystem.cpp  ItemPickupSystem.cpp  MapObjectSystem.cpp  MovementSystem.cpp  RenderStateSystem.cpp
src/ui/: DialogueBox.cpp
src/utils/: Logger.cpp
src/world/: Map.cpp  MapLoader.cpp  MapObject.cpp  MapObjectRepository.cpp  MapRepository.cpp  NoWalkable.cpp  SpriteRepository.cpp  TileRepository.cpp  World.cpp
(+21 files in other folders)
